Inmob-Salesforce/force-app/main/default/objects/Relacion_Contacto_Cuenta__c/Relacion_Contacto_Cuenta__c.object-meta.xml
<CustomObject>
    <label>Relación Contacto con Cuenta</label>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Código de Relación Contacto con Cuenta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relaciones Contactos con cuentas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>