Inmob-Salesforce/force-app/main/default/objects/Relacion_Contacto_Cuenta__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relaciones Contactos con cuentas</relationshipLabel>
    <relationshipName>Relaciones_Contactos_con_cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>