Inmob-Salesforce/force-app/main/default/objects/Relacion_Contacto_Cuenta__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relaciones Contactos con cuentas</relationshipLabel>
    <relationshipName>Relaciones_Contactos_cuentas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>