Inmob-Salesforce/force-app/main/default/objects/Relacion_Contacto_Cuenta__c/fields/Tipo_de_Relacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Relacion__c</fullName>
    <label>Tipo de Relación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Familiar</fullName>
            </value>
            <value>
                <fullName>Negocios</fullName>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>